Fix fade transition positioning on mobile

--- a/src/assets/styles/transitions.less
+++ b/src/assets/styles/transitions.less
@@ -3,7 +3,6 @@
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   position: absolute;
-  top: 84px;
   left: 0;
   right: 0;
 }
